⛈🌹 Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Get Started VueJS</title>
+  <title>~noun</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="stylesheet" href="https://unpkg.com/tachyons" />
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Magra">
+  <link href="https://fonts.googleapis.com/css?family=Magra" rel="stylesheet">
   <link rel="stylesheet" href="/styles.css" />
 	<script src="https://unpkg.com/getlibs"></script>
 </head>
